[package]
name = "pioneer-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_core = "0.240.0"
egui = "0.23"
egui-wgpu = "0.23"
egui-winit = "0.23"
winit = "0.28"
wgpu = "0.17"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"
futures-util = "0.3"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
cgmath = "0.18"

[profile.release]
opt-level = 3
